[tool.poetry]
name = "mypackage"
version = "0.0.1"
description = "Upgraded version of legacy DocGen for OneParking"
authors = [

]
license = "BIOS"
readme = "README.md"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "mypackage", from = "src" }
]

[tool.poetry.dependencies] # This is the main dependency group. The dependencies needed by the package should be placed here.
python = ">=3.8.0, <4.0"

[tool.poetry.group.dev.dependencies] # These are the dependencies used only for development (i.e. tools and libraries used to build, test, validate this package).
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
flake8-docstrings = "*"
isort = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pyupgrade = "*"
pytest-mock = "^3.11.1"
regex = "^2023.12.25"


[[tool.poetry.source]]
name = "rb-pypi-mirror"
url = "https://rb-artifactory.bosch.com/artifactory/api/pypi/python-remote/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'
line-length = 100

[tool.pytest.ini_options]
addopts = """\
    --cov mypackage \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
exclude = ['tests/']